# ACV

./: README.md
assignment1/: CMakeLists.txt
assignment1/data/: input.txt
assignment1/src/dodonkor/: CMakeLists.txt  countingObjects.h  countingObjectsApplication.cpp  countingObjectsImplementation.cpp
assignment2/: CMakeLists.txt
assignment2/data/: input.txt  input3.txt  input_old.txt  output.txt
assignment2/data/old/: output.txt
assignment2/src/dodonkor/: classifyObjects.h  classifyObjectsApplication.cpp  classifyObjectsImplementation.cpp
assignment3/: CMakeLists.txt
assignment3/data/: input.txt  input0.txt  output.txt
assignment3/src/dodonkor/: ObjDetectionLocalImplementation.cpp  objDetectionLocal.h  objDetectionLocalApplication.cpp
assignment4/: CMakeLists.txt
assignment4/data/: input.txt
assignment4/src/: CMakeLists.txt
assignment4/src/dodonkor/: superPosition.h  superPositionApplication.cpp  superPositionImplementation.cpp
assignment4/src/dodonkor - Copy/: CMakeLists.txt  superPosition.h  superPositionApplication.cpp  superPositionImplementation.cpp
